<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MyEscrowListPage</class>
 <widget class="QWidget" name="MyEscrowListPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1180</width>
    <height>380</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>My Escrow List</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="labelExplanation">
     <property name="textFormat">
      <enum>Qt::PlainText</enum>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="completeCheck">
     <property name="text">
      <string>Show Completed/ Refunded/Expired Escrows</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QTableView" name="tableView">
     <property name="contextMenuPolicy">
      <enum>Qt::CustomContextMenu</enum>
     </property>
     <property name="toolTip">
      <string/>
     </property>
     <property name="tabKeyNavigation">
      <bool>false</bool>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="sortingEnabled">
      <bool>true</bool>
     </property>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="copyEscrow">
       <property name="toolTip">
        <string>Copy the currently selected escrow to the system clipboard</string>
       </property>
       <property name="text">
        <string>&amp;Copy Escrow ID</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="detailButton">
       <property name="text">
        <string>Details</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="manageButton">
       <property name="toolTip">
        <string>Release selected escrow to merchant</string>
       </property>
       <property name="text">
        <string>Manage Escrow</string>
       </property>
       <property name="iconSize">
        <size>
         <width>16</width>
         <height>16</height>
        </size>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buyerMessageButton">
       <property name="toolTip">
        <string>Send message to buyer</string>
       </property>
       <property name="text">
        <string>Send Msg To Buyer</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="sellerMessageButton">
       <property name="toolTip">
        <string>Send message to seller</string>
       </property>
       <property name="text">
        <string>Send Msg To Seller</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="arbiterMessageButton">
       <property name="toolTip">
        <string>Send message to arbiter</string>
       </property>
       <property name="text">
        <string>Send Msg To Arbiter</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="refreshButton">
       <property name="maximumSize">
        <size>
         <width>16777215</width>
         <height>48</height>
        </size>
       </property>
       <property name="toolTip">
        <string>Refresh your list of escrows</string>
       </property>
       <property name="text">
        <string>&amp;Refresh</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="exportButton">
       <property name="toolTip">
        <string>Export the data in the current tab to a file</string>
       </property>
       <property name="text">
        <string>&amp;Export</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="standardButtons">
        <set>QDialogButtonBox::Ok</set>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../syscoin.qrc"/>
 </resources>
 <connections/>
</ui>
